@@ -60,3 +60,4 @@ Thumbs.db
 
 # Avoid archives of this distribution
 \bModule-Provision-v?[\d\.\_]+
+\bTraitFor/Debian.pm$
